--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
+
 # Site settings
 title:          Tale
 description:    "Minimal Jekyll theme for storytellers"
-baseurl:        "/tale"
 url:            "https://chesterhow.github.io"
 
 # Google Analytics
@@ -31,6 +31,7 @@ plugins:
   # - jemoji #Uncomment this to allow emoji in your post
 
 # Permalinks
+theme:      tale
 permalink:      /:year-:month-:day/:title
 paginate:       5
 
