--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,7 @@
 
 # Site settings
-title:          aaaaaaaaaaa
+title:          admin
 description:    "Minimal Jekyll theme for storytellers"
-url:            "https://chesterhow.github.io"
 
 # Google Analytics
 google_analytics: UA—XXXXXXXX-X
