--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 
 # Site settings
-title:          admin
+title:          "admin"
 description:    "Minimal Jekyll theme for storytellers"
 
 # Google Analytics
