--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ permalink:      /:year-:month-:day/:title
 title:          "XinYiSec"
 paginate:       5
 baseurl:        ""
-url:            "https://github.com/xinyisleep"
+url:            "https://github.com/bexonp"
 
 # Assets
 sass:
