--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 permalink:      /:year-:month-:day/:title
 
 # Setup
-title:          "XinYiSec的小木屋"
+title:          "XinYiSec"
 paginate:       5
 baseurl:        ""
 url:            "https://xinyisleep.github.io"
